...
        are understand this is big responsibility and work hard to protect your information and put you in contarl.
    </string>
    <string name="registration_create_account_button">Create Account</string>
    <string name="registrartion_already_member">
        <u>I am already member</u>
    </string>
    <string name="registration_password_not_equals_msg">Password and Confirm Password content are different</string>
    <string name="registration_name_empty_msg">Name can not be empty</string>
    <string name="registration_user_empty_msg">Username can not be empty</string>
    <string name="registration_email_empty_msg">Email can not be empty</string>
    <string name="registration_password_empty_msg">Password can not be empty</string>
    <string name="registration_con_pass_empty_msg">Password confirm can not be empty</string>
    <string name="search_hint">Please enter an address</string>
...
